# voice-changer

./: .gitignore  README.md
app/: CMakeLists.txt
app/dependencies/PortAudio/lib/: portaudio_x64.lib
app/includes/: AAudioSampleProducer.hpp  AudioSample.hpp  AvailableEffects.hpp  EffectManager.hpp  FileFormats.hpp  FilePlayerManager.hpp  HotKeyManager.hpp  PortAudioWrapper.hpp  UserData.hpp  VoiceChangerApp.hpp  voice-changer.h
app/includes/effects/: AEffect.hpp  EchoEffect.hpp  types.hpp
app/sources/: AAudioSampleProducer.cpp  EffectManager.cpp  FilePlayerManager.cpp  HotKeyManager.cpp  PortAudioWrapper.cpp  VoiceChangerApp.cpp  main.cpp  voice-changer.cpp
app/sources/effects/: AEffect.cpp  EchoEffect.cpp
resources/: lua_config.lua
